--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unit10hw",
+  "name": "team-profile-generator",
   "version": "1.0.0",
   "description": "OOP and testing for week 10 homework",
   "main": "index.js",
@@ -8,18 +8,18 @@
     "test": "test"
   },
   "scripts": {
-    "test": "jest --verbose test/*"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/stevetrilogy/unit10hw.git"
+    "url": "git+https://github.com/maxman3789/Team-Profile-Generator.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/stevetrilogy/unit10hw/issues"
+    "url": "https://github.com/maxman3789/Team-Profile-Generator/issues"
   },
-  "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
+  "homepage": "https://github.com/maxman3789/Team-Profile-Generator#readme",
   "dependencies": {
     "inquirer": "^6.5.2",
     "just": "^0.1.8"
